--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,22 @@
 .avatar{
     max-width: 350px;
 }
+
+.hide {
+    display: none!important;
+}
+
+.show {
+    display: block!important;
+}
+
+.register-popup {
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
+    top: 70px;
+}
+
+.blur {
+    filter: blur(8px);
+}
