--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,21 @@
     top: 70px;
 }
 
+.login-popup {
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
+    top: 70px;
+}
+
+.user-popup {
+    position: fixed;
+    overflow: hidden;
+    width: 60%;
+    top: 70px;
+    right: 26%;
+}
+
 .blur {
     filter: blur(8px);
 }
